--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Decode and Save Keystore
         run: |
-          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > release-key.jks
+          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release-key.jks
 
       - name: Build Android APK
         env:
