--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -74,8 +74,7 @@ jobs:
         run: ls -R build/app/outputs/flutter-apk
 
       - name: Rename Android APK
-        run: mv ./build/app/outputs/flutter-apk/app-release.apk \
-          ./build/app/outputs/flutter-apk/nt_helper-${VERSION}.apk
+        run: mv ./build/app/outputs/flutter-apk/app-release.apk ./build/app/outputs/flutter-apk/nt_helper-${VERSION}.apk
 
       - name: Upload Android Artifact to Release
         uses: ncipollo/release-action@v1
