--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   json_serializable: ^6.9.0
+  mockito: ^5.4.5
   freezed: ^2.5.7
   test: ^1.25.8
 
