--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -106,9 +106,7 @@ jobs:
           flutter clean
           flutter pub get
           # For ad-hoc or release builds with code signing, typically:
-          flutter build ipa --release
-          # If you need a custom export-options plist, see:
-          #   flutter build ipa --export-options-plist=path/to/ExportOptions.plist
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
 
       - name: Debug List final artifacts
         run: ls -R build/ios/ipa || true
@@ -132,7 +130,7 @@ jobs:
 
       # 7) Or simply upload the .ipa as an artifact on GitHub
       - name: Upload IPA
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: MyApp-iOS-IPA
           path: build/ios/ipa/*.ipa
