--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -42,7 +42,7 @@ jobs:
       # 2) Decode your mobile provisioning profile from secrets.DEV_MOBILEPROVISIONING_PROFILE
       #    (or MOBILEPROVISION if that's your correct secret name)
       - name: Decode provisioning profile from Base64
-        run: echo "${{ secrets.DEV_MOBILEPROVISIONING_PROFILE }}" | base64 --decode > MyApp_Dev.mobileprovision
+        run: echo "${{ secrets.DEV_MOBILEPROVISIONING_PROFILE }}" | base64 --decode > nt_helper_dev_profile.mobileprovision
 
       - name: Debug list files
         run: |
@@ -95,7 +95,7 @@ jobs:
       - name: Install provisioning profile
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp MyApp_Dev.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
+          cp nt_helper_dev_profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
           echo "Provisioning profiles in that folder:"
           ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
@@ -105,8 +105,7 @@ jobs:
           set -x
           flutter clean
           flutter pub get
-          flutter build ios -v
-          flutter build ipa --export-options-plist=ios/ExportOptions.plist -v
+          flutter build ipa --export-options-plist=ios/ExportOptions.plist
 
       - name: Debug List final artifacts
         run: ls -R build/ios/ipa || true
