--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -7,9 +7,9 @@
 	<key>manageAppVersionAndBuildNumber</key>
 	<true/>
 	<key>method</key>
-	<string>app-store-connect</string>
+	<string>development</string>
 	<key>signingStyle</key>
-	<string>automatic</string>
+	<string>manual</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
@@ -19,7 +19,7 @@
         <key>provisioningProfiles</key>
           <dict>
             <key>dev.nosuch.ntHelper</key>
-            <string>nt-helper-dev-profile</string>
+            <string>nt_helper_dev_profile</string>
           </dict>
 </dict>
 </plist>
