--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -113,10 +113,9 @@ jobs:
       # 6) Optionally, use your Apple ID & app-specific password to upload
       #    automatically to TestFlight/App Store. Example with fastlane:
       #
-      - name: Install fastlane (optional)
+      - name: Install fastlane
         run: sudo gem install fastlane
-
-      - name: Upload to TestFlight (optional)
+      - name: Upload to TestFlight
         run: |
           fastlane pilot upload \
           --ipa "./build/ios/ipa/nt_helper.ipa" \
@@ -125,7 +124,6 @@ jobs:
           --team_id "${{ secrets.APPLE_TEAM }}" \
           --app_specific_password "${{ secrets.APP_SPECIFIC_PASSWORD }}" \
           --app_identifier "dev.nosuch.ntHelper"
-         shell: bash
 
       # 7) Or simply upload the .ipa as an artifact on GitHub
       - name: Upload IPA
