--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -117,8 +117,8 @@ jobs:
         run: sudo gem install fastlane
       - name: Upload to TestFlight
         run: |
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD="${{ secrets.APP_SPECIFIC_PASSWORD }}"
-          FASTLANE_USER="${{ secrets.APPLE_ID }}"
+          export FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD="${{ secrets.APP_SPECIFIC_PASSWORD }}"
+          export FASTLANE_USER="${{ secrets.APPLE_ID }}"
           fastlane pilot upload \
           --ipa "./build/ios/ipa/nt_helper.ipa" \
           --team_id "${{ secrets.APPLE_TEAM }}" \
