--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -118,9 +118,10 @@ jobs:
       - name: Upload to TestFlight
         run: |
           export FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD="${{ secrets.APP_SPECIFIC_PASSWORD }}"
-          export FASTLANE_USER="${{ secrets.APPLE_ID }}"
+          export FASTLANE_USER="neal.sanche@gmail.com"
           fastlane pilot upload \
           --ipa "./build/ios/ipa/nt_helper.ipa" \
+          --apple_id "${{ secrets.APPLE_ID }}"
           --team_id "${{ secrets.APPLE_TEAM }}" \
           --app_identifier "dev.nosuch.ntHelper"
 
