--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,7 +49,7 @@
 	<string>This app cannot use Bluetooth midi, as it needs to be connected to the device via a USB cable.</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This app cannot connect to the device over the network, it requires a USB cable.</string>
-	<key>doc://com.apple.documentation/documentation/bundleresources/information_property_list/itsappusesnonexemptencryption</key>
+	<key> ITSAppUsesNonExemptEncryption</key>
 	<false/>
 </dict>
 </plist>
