--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,7 +49,7 @@
 	<string>This app cannot use Bluetooth midi, as it needs to be connected to the device via a USB cable.</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This app cannot connect to the device over the network, it requires a USB cable.</string>
-	<key> ITSAppUsesNonExemptEncryption</key>
-	<false/>
-</dict>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <string>NO</string>
+    </dict>
 </plist>
