--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   pasteboard: ^0.3.0
   retry: ^3.1.2
+  async: ^2.12.0
 
 dev_dependencies:
   flutter_test:
