--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.16.0+29
+version: 1.17.0+30
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -51,6 +51,7 @@ dependencies:
   pasteboard: ^0.3.0
   retry: ^3.1.2
   async: ^2.12.0
+  haptic_feedback: ^0.5.1+1
 
 dev_dependencies:
   flutter_test:
