--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   retry: ^3.1.2
   async: ^2.12.0
   haptic_feedback: ^0.5.1+1
+  bitsdojo_window: ^0.1.6
 
 dev_dependencies:
   flutter_test:
