--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.22
   path_provider: ^2.1.3
   path: ^1.9.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
