--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -3,10 +3,10 @@ name: Multi-Platform Build
 on:
   push:
     tags:
-      - 'v*'  # e.g., v1.0, v1.2.3, etc.
+      - "v*" # e.g., v1.0, v1.2.3, etc.
 
 permissions:
-  contents: write  # Needed for creating/updating GitHub releases
+  contents: write # Needed for creating/updating GitHub releases
 
 jobs:
   create-release:
@@ -83,6 +83,57 @@ jobs:
           tag: ${{ github.ref_name }}
           allowUpdates: true
           artifacts: "**/nt_helper-${{ env.VERSION }}.apk"
+
+  android_aab_play_store:
+    name: Build Android AAB and Upload to Play Store
+    runs-on: ubuntu-latest
+    needs: create-release
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Extract Version
+        id: extract_version
+        run: |
+          VERSION="${{ github.ref_name }}"
+          VERSION="${VERSION#v}"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: "3.29.3"
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Decode and Save Keystore
+        run: |
+          echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release-key.jks
+
+      - name: Build Android App Bundle
+        env:
+          KEYSTORE_PATH: release-key.jks # Relative to android/app
+          KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+        run: flutter build appbundle --release
+
+      - name: List build output (debug)
+        run: ls -R build/app/outputs/bundle/release
+
+      - name: Rename Android AAB
+        run: mv ./build/app/outputs/bundle/release/app-release.aab ./build/app/outputs/bundle/release/nt_helper-${VERSION}.aab
+
+      - name: Upload AAB to Google Play
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}
+          packageName: dev.nosuch.nt_helper
+          releaseFiles: ./build/app/outputs/bundle/release/nt_helper-${{ env.VERSION }}.aab
+          track: internal
+          status: completed
 
   macos:
     name: Build macOS App
