--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -94,6 +94,9 @@ jobs:
           echo "Provisioning profiles in that folder:"
           ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
 
+      - name: Download iOS 18 SDK
+        run: sudo xcodebuild -downloadPlatform iOS
+
       - name: Flutter build IPA
         run: |
           set -x
