--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.9.0
   intl: ^0.20.2
+  file_picker: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -122,7 +123,6 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
-    - test/
     - docs/algorithms/
     - docs/features/
 
