--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,6 @@ dependencies:
 
   flutter_midi_command: ^0.5.2
   image: ^4.5.2
-  bloc: ^9.0.0
-  flutter_bloc: ^9.0.0
-  freezed_annotation: ^2.0.0
-  json_annotation: ^4.9.0
   shared_preferences: ^2.0.18
   package_info_plus: ^8.1.2
   flutter_launcher_icons: ^0.14.2
@@ -62,6 +58,13 @@ dependencies:
   path: ^1.9.0
   intl: ^0.20.2
   file_picker: ^10.1.9
+
+  # UI & State Management
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  docman: ^1.2.0
 
 dev_dependencies:
   flutter_test:
