--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,4 +56,8 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access so that you can select your SD Card root directory to index your presets in disk mode.</string>
     </dict>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 </plist>
