--- a/ios/Runner/Release.entitlements
+++ b/ios/Runner/Release.entitlements
@@ -8,5 +8,9 @@
 	<true/>
 	<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.dev.nosuch.NtHelper</string>
+	</array>
 </dict>
 </plist> 
