--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   json_annotation: ^4.9.0
   docman: ^1.2.0
   security_scoped_resource: ^0.0.2
+  desktop_drop: ^0.6.0
+  cross_file: ^0.3.4
 
 dev_dependencies:
   flutter_test:
