feat: integrate export preset

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,8 @@ dependencies:
   desktop_drop: ^0.6.0
   cross_file: ^0.3.4
 
-  archive: ^4.0.7     # For ZIP creation
+  archive: ^4.0.7
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
