--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   bitsdojo_window: ^0.1.6
   mcp_dart: ^0.5.3
   collection: ^1.18.0
+  uuid: ^4.5.1
 
   # Drift dependencies
   drift: ^2.26.1
@@ -62,6 +63,7 @@ dependencies:
 
   # UI & State Management
   flutter_bloc: ^9.1.1
+  bloc: ^9.0.0
   equatable: ^2.0.5
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
@@ -73,6 +75,7 @@ dependencies:
   archive: ^4.0.7
   provider: ^6.1.5
   dart_elf: ^1.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -103,10 +106,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -136,6 +135,7 @@ flutter:
   assets:
     - docs/algorithms/
     - docs/features/
+    - assets/mcp_docs/
 
 flutter_launcher_icons:
   # ... (Keep existing launcher icon config)
