--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   async: ^2.12.0
   haptic_feedback: ^0.5.1+1
   bitsdojo_window: ^0.1.6
-  mcp_dart: ^0.5.3
+  mcp_dart: 
+    git: https://github.com/thorinside/mcp_dart
   collection: ^1.18.0
   uuid: ^4.5.1
 
