--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   async: ^2.12.0
   haptic_feedback: ^0.5.1+1
   bitsdojo_window: ^0.1.6
+  camera: ^0.11.0
   mcp_dart: 
     git: https://github.com/thorinside/mcp_dart
   collection: ^1.18.0
