--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,50 +37,50 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
 
-  flutter_midi_command: ^0.5.2
-  image: ^4.5.2
-  shared_preferences: ^2.0.18
-  package_info_plus: ^8.1.2
-  flutter_launcher_icons: ^0.14.2
+  flutter_midi_command: ^0.5.3
+  image: ^4.5.4
+  shared_preferences: ^2.5.3
+  package_info_plus: ^8.3.1
+  flutter_launcher_icons: ^0.14.4
   pasteboard: ^0.4.0
   retry: ^3.1.2
-  async: ^2.12.0
+  async: ^2.13.0
   haptic_feedback: ^0.5.1+1
   bitsdojo_window: ^0.1.6
-  camera: ^0.11.0
+  camera: ^0.11.2
   mcp_dart: 
     git: https://github.com/thorinside/mcp_dart
-  collection: ^1.18.0
+  collection: ^1.19.1
   uuid: ^4.5.1
-  crypto: ^3.0.5
+  crypto: ^3.0.6
 
   # Drift dependencies
-  drift: ^2.26.1
+  drift: ^2.28.1
   sqlite3_flutter_libs: ^0.5.39
-  path_provider: ^2.1.3
-  path: ^1.9.0
+  path_provider: ^2.1.5
+  path: ^1.9.1
   intl: ^0.20.2
-  file_picker: ^10.1.9
+  file_picker: ^10.3.2
 
   # UI & State Management
   flutter_bloc: ^9.1.1
   bloc: ^9.0.0
-  equatable: ^2.0.5
-  freezed_annotation: ^3.0.0
+  equatable: ^2.0.7
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   docman: ^1.2.0
   security_scoped_resource: ^0.0.2
-  desktop_drop: ^0.6.0
-  cross_file: ^0.3.4
+  desktop_drop: ^0.6.1
+  cross_file: ^0.3.4+2
 
   archive: ^4.0.7
-  provider: ^6.1.5
+  provider: ^6.1.5+1
   dart_elf: ^1.0.1
-  http: ^1.2.2
-  pub_semver: ^2.1.4
-  url_launcher: ^6.3.1
+  http: ^1.5.0
+  pub_semver: ^2.2.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -92,14 +92,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.0
-  mockito: ^5.4.5
-  freezed: ^3.0.0
-  test: ^1.25.8
+  build_runner: ^2.7.0
+  json_serializable: ^6.10.0
+  mockito: ^5.5.0
+  freezed: ^3.2.0
+  test: ^1.26.2
 
   # Drift dev dependencies
-  drift_dev: ^2.18.0
+  drift_dev: ^2.28.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
