--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,10 @@ dev_dependencies:
   # Drift dev dependencies
   drift_dev: ^2.28.1
 
+dependency_overrides:
+  flutter_midi_command_linux:
+    git: https://github.com/thorinside/flutter_midi_command_linux.git
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
