--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
 
   archive: ^4.0.7
   provider: ^6.1.5+1
+  get_it: ^8.0.3
   dart_elf: ^1.0.1
   http: ^1.5.0
   pub_semver: ^2.2.0
