--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,9 @@ dependencies:
   pub_semver: ^2.2.0
   url_launcher: ^6.3.2
   share_plus: ^11.0.1
+  universal_ble: ^0.9.11
+  vector_math: ^2.1.4
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
