--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.49.1+110
+version: 1.50.0+111
 
 environment:
   sdk: ">=3.8.1 <4.0.0"
@@ -152,6 +152,7 @@ flutter:
     - docs/algorithms/
     - docs/features/
     - assets/mcp_docs/
+    - assets/metadata/
 
 flutter_launcher_icons:
   # ... (Keep existing launcher icon config)
