--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   retry: ^3.1.2
   async: ^2.13.0
   haptic_feedback: ^0.5.1+1
-  bitsdojo_window: ^0.1.6
+  bitsdojo_window: 0.1.6
   camera: ^0.11.2
   mcp_dart: 
     git: https://github.com/thorinside/mcp_dart
