--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - macos-build
 
+env:
+  FLUTTER_VERSION: "3.35.5"
+
 permissions:
   contents: write # Needed for creating/updating GitHub releases
 
@@ -29,7 +32,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: "3.35.1"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
 
       - name: Install dependencies
         run: |
