--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - ios-build
 
+env:
+  FLUTTER_VERSION: "3.35.5"
+
 jobs:
   build-ios:
     runs-on: macos-latest
@@ -29,7 +32,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version: "3.35.1"
+          flutter-version: ${{ env.FLUTTER_VERSION }}
 
       - name: Flutter Doctor (debug)
         run: flutter doctor -v
