--- a/bmad/bmm/workflows/workflow-status/paths/game-design.yaml
+++ b/bmad/bmm/workflows/workflow-status/paths/game-design.yaml
@@ -45,15 +45,15 @@ phases:
     name: "Solutioning"
     conditional: "if_level_3_4"
     workflows:
-      - id: "solution-architecture"
+      - id: "create-architecture"
         required: true
         agent: "architect"
-        command: "solution-architecture"
+        command: "create-architecture"
         note: "Engine architecture, networking, systems"
-      - id: "assess-project-ready"
+      - id: "solutioning-gate-check"
         required: true
-        agent: "sm"
-        command: "assess-project-ready"
+        agent: "architect"
+        command: "solutioning-gate-check"
 
   - phase: 4
     name: "Implementation"
@@ -109,7 +109,7 @@ phases:
             command: "playtest"
           - id: "retrospective"
             optional: true
-            agent: "pm"
+            agent: "sm"
 
 story_naming:
   level_0_1: "story-<feature>.md"
