--- a/bmad/bmm/workflows/workflow-status/paths/greenfield-level-2.yaml
+++ b/bmad/bmm/workflows/workflow-status/paths/greenfield-level-2.yaml
@@ -33,20 +33,31 @@ phases:
         required: true
         agent: "pm"
         command: "prd"
-        output: "Creates epics.md and story list"
+        output: "Creates PRD with epics.md and story list"
       - id: "ux-spec"
         conditional: "if_has_ui"
-        agent: "pm"
+        agent: "ux-expert"
         command: "ux-spec"
       - id: "tech-spec"
         optional: true
-        agent: "architect"
+        agent: "pm"
         command: "tech-spec"
-        note: "Lightweight technical planning"
+        note: "Lightweight Technical Specification planning"
 
   - phase: 3
     name: "Solutioning"
-    skip: true
+    required: true
+    workflows:
+      - id: "create-architecture"
+        required: true
+        agent: "architect"
+        command: "create-architecture"
+        output: "System-wide architecture document"
+      - id: "solutioning-gate-check"
+        required: true
+        agent: "architect"
+        command: "solutioning-gate-check"
+        note: "Validate PRD + UX + architecture cohesion before implementation"
 
   - phase: 4
     name: "Implementation"
@@ -84,7 +95,7 @@ phases:
     epic_completion:
       - id: "retrospective"
         optional: true
-        agent: "pm"
+        agent: "sm"
         command: "retrospective"
         note: "After each epic completes"
 
