--- a/bmad/bmm/workflows/workflow-status/paths/greenfield-level-3.yaml
+++ b/bmad/bmm/workflows/workflow-status/paths/greenfield-level-3.yaml
@@ -36,23 +36,23 @@ phases:
         output: "High-level requirements and epic definitions"
       - id: "ux-spec"
         conditional: "if_has_ui"
-        agent: "pm"
+        agent: "ux-expert"
         command: "ux-spec"
 
   - phase: 3
     name: "Solutioning"
     required: true
     workflows:
-      - id: "solution-architecture"
+      - id: "create-architecture"
         required: true
         agent: "architect"
-        command: "solution-architecture"
+        command: "create-architecture"
         output: "System-wide architecture document"
-      - id: "assess-project-ready"
+      - id: "solutioning-gate-check"
         required: true
-        agent: "sm"
-        command: "assess-project-ready"
-        note: "Validate architecture before implementation"
+        agent: "architect"
+        command: "solutioning-gate-check"
+        note: "Validate PRD + UX + architecture cohesion before implementation"
 
   - phase: 4
     name: "Implementation"
@@ -101,7 +101,7 @@ phases:
     epic_completion:
       - id: "retrospective"
         recommended: true
-        agent: "pm"
+        agent: "sm"
         command: "retrospective"
 
 story_naming: "story-<epic>.<story>.md"
