--- a/bmad/bmm/workflows/3-solutioning/solutioning-gate-check/workflow.yaml
+++ b/bmad/bmm/workflows/3-solutioning/solutioning-gate-check/workflow.yaml
@@ -1,5 +1,5 @@
 # Implementation Ready Check - Workflow Configuration
-name: implementation-ready-check
+name: solutioning-gate-check
 description: "Systematically validate that all planning and solutioning phases are complete and properly aligned before transitioning to Phase 4 implementation. Ensures PRD, architecture, and stories are cohesive with no gaps or contradictions."
 author: "BMad Builder"
 
@@ -16,7 +16,7 @@ workflow_status_workflow: "{project-root}/bmad/bmm/workflows/workflow-status/wor
 workflow_paths_dir: "{project-root}/bmad/bmm/workflows/workflow-status/paths"
 
 # Module path and component files
-installed_path: "{project-root}/bmad/bmm/workflows/3-solutioning/implementation-ready-check"
+installed_path: "{project-root}/bmad/bmm/workflows/3-solutioning/solutioning-gate-check"
 template: "{installed_path}/template.md"
 instructions: "{installed_path}/instructions.md"
 validation: "{installed_path}/checklist.md"
@@ -27,7 +27,7 @@ default_output_file: "{output_folder}/implementation-readiness-report-{{date}}.m
 # Expected input documents (varies by project level)
 recommended_inputs:
   - prd: "{output_folder}/prd*.md"
-  - architecture: "{output_folder}/solution-architecture*.md"
+  - architecture: "{output_folder}/architecture*.md or {output_folder}/architecture*.md"
   - tech_spec: "{output_folder}/tech-spec*.md"
   - epics_stories: "{output_folder}/epic*.md"
   - ux_artifacts: "{output_folder}/ux*.md"
