--- a/bmad/bmm/workflows/workflow-status/paths/greenfield-level-4.yaml
+++ b/bmad/bmm/workflows/workflow-status/paths/greenfield-level-4.yaml
@@ -37,29 +37,24 @@ phases:
         output: "Comprehensive product requirements document"
       - id: "ux-spec"
         required: true
-        agent: "pm"
+        agent: "ux-expert"
         command: "ux-spec"
         note: "Multiple UI/UX specifications needed"
-      - id: "product-spec"
-        recommended: true
-        agent: "pm"
-        command: "product-spec"
-        note: "Detailed product specifications"
 
   - phase: 3
     name: "Solutioning"
     required: true
     workflows:
-      - id: "solution-architecture"
+      - id: "create-architecture"
         required: true
         agent: "architect"
-        command: "solution-architecture"
+        command: "create-architecture"
         output: "Enterprise architecture documentation"
-      - id: "assess-project-ready"
+      - id: "solutioning-gate-check"
         required: true
-        agent: "sm"
-        command: "assess-project-ready"
-        note: "Critical validation before enterprise implementation"
+        agent: "architect"
+        command: "solutioning-gate-check"
+        note: "Validate PRD + UX + architecture cohesion before implementation"
 
   - phase: 4
     name: "Implementation"
@@ -108,7 +103,7 @@ phases:
     epic_completion:
       - id: "retrospective"
         required: true
-        agent: "pm"
+        agent: "sm"
         command: "retrospective"
         note: "Critical for enterprise-scale learning"
 
