Story E5.1: Extend database schema for template flag
Added database support for marking presets as reusable templates.
This is the foundation for the Preset Template System (Epic 5).

Key Changes:
- Added isTemplate boolean column to presets table (default: false)
- Incremented database schema version from 8 to 9
- Added migration logic for existing databases
- Added getTemplates() and getNonTemplates() query methods to PresetsDao
- Updated saveFullPreset() to accept optional isTemplate parameter
- Updated all PresetEntry constructors across codebase
- Added 4 comprehensive tests for template functionality

All Acceptance Criteria Met:
✓ isTemplate column added with default false
✓ Drift migration generated and tested
✓ PresetsDao exposes isTemplate in queries
✓ saveFullPreset() accepts isTemplate parameter
✓ Migration runs successfully (verified via tests)
✓ flutter analyze: 0 warnings
✓ All tests pass: 218/218

Files Modified:
- Database schema: lib/db/tables.dart, lib/db/database.dart
- DAO layer: lib/db/daos/presets_dao.dart
- MIDI managers: lib/domain/disting_midi_manager.dart, lib/domain/offline_disting_midi_manager.dart
- Tests: test/db/daos/presets_dao_test.dart (added 4 new tests)
- Generated: lib/db/database.g.dart

Story: e5-1-extend-database-schema-for-template-flag
Epic: epic-5

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2025-10-28
+# generated: 2025-10-30
 # project: nt_helper
 # project_key: nt_helper
 # tracking_system: file-system
@@ -29,7 +29,7 @@
 # - SM typically drafts next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', SM reviews, then Dev moves to 'done'
 
-generated: 2025-10-28
+generated: 2025-10-30
 project: nt_helper
 project_key: nt_helper
 tracking_system: file-system
@@ -60,6 +60,16 @@ development_status:
   e4-5-add-tests-for-new-es-5-routing-implementations: done
   e4-6-update-documentation-and-architecture-notes: done
   epic-4-retrospective: optional
+
+  epic-5: contexted
+  e5-1-extend-database-schema-for-template-flag: review
+  e5-2-add-ui-to-tag-untag-presets-as-templates: ready-for-dev
+  e5-3-filter-presets-to-show-templates-only: ready-for-dev
+  e5-4-implement-template-injection-logic-append-only: ready-for-dev
+  e5-5-build-template-preview-dialog: ready-for-dev
+  e5-6-add-inject-template-action-to-templates-view: ready-for-dev
+  e5-7-handle-edge-cases-and-error-scenarios: ready-for-dev
+  epic-5-retrospective: optional
 
   epic-6: contexted
   e6-1-mobile-performance-page-support: review
