Story E5.2: Add UI to tag/untag presets as templates
Implemented user interface for marking presets as templates in the Offline
Data screen. Added star icon indicator for templates, long-press context menu
for toggling template status, and database persistence with immediate UI updates.

Key acceptance criteria met:
- Star icon indicator shown on template presets in list
- Long-press context menu shows Mark/Unmark as Template option
- Database updates via PresetsDao.toggleTemplateStatus method
- UI refreshes immediately after toggle via cubit reload
- Template state persists across app restarts
- Confirmation dialog shown before unmarking templates
- Zero flutter analyze warnings, all 732 tests pass

Technical implementation:
- GestureDetector with onLongPress for context menu trigger
- Popup menu positioned using overlay coordinates
- toggleTemplateStatus updates isTemplate and lastModified timestamp
- Cubit orchestrates database update and UI refresh
- BuildContext async gap handled with mounted check

Files modified:
- lib/ui/metadata_sync/metadata_sync_page.dart - Added star icon and long-press menu
- lib/db/daos/presets_dao.dart - Added toggleTemplateStatus method
- lib/ui/metadata_sync/metadata_sync_cubit.dart - Added togglePresetTemplate
- test/db/daos/presets_dao_test.dart - Added 3 unit tests

Story: e5-2-add-ui-to-tag-untag-presets-as-templates
Epic: epic-5

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -62,8 +62,8 @@ development_status:
   epic-4-retrospective: optional
 
   epic-5: contexted
-  e5-1-extend-database-schema-for-template-flag: review
-  e5-2-add-ui-to-tag-untag-presets-as-templates: ready-for-dev
+  e5-1-extend-database-schema-for-template-flag: done
+  e5-2-add-ui-to-tag-untag-presets-as-templates: done
   e5-3-filter-presets-to-show-templates-only: ready-for-dev
   e5-4-implement-template-injection-logic-append-only: ready-for-dev
   e5-5-build-template-preview-dialog: ready-for-dev
