--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -64,7 +64,7 @@ development_status:
   epic-5: contexted
   e5-1-extend-database-schema-for-template-flag: done
   e5-2-add-ui-to-tag-untag-presets-as-templates: done
-  e5-3-filter-presets-to-show-templates-only: ready-for-dev
+  e5-3-filter-presets-to-show-templates-only: done
   e5-4-implement-template-injection-logic-append-only: ready-for-dev
   e5-5-build-template-preview-dialog: ready-for-dev
   e5-6-add-inject-template-action-to-templates-view: ready-for-dev
