Story E5.4: Implement template injection logic (append-only)
Implemented core template injection functionality that appends template
algorithms to the current hardware preset without clearing existing content.
The method validates slot limits, adds algorithms sequentially, applies
parameters and mappings, and gives users control over saving.

Key acceptance criteria met:
- injectTemplateToDevice() method created in MetadataSyncCubit
- Does NOT call requestNewPreset() (preserves current preset)
- Calls requestAddAlgorithm() for each template slot sequentially
- Sets parameter values and mappings with correct slot offset
- Does NOT call requestSavePreset() (user must save manually)
- Validates current + template slots ≤ 32 limit
- Throws exception with descriptive message if limit exceeded
- Emits LoadingPreset/PresetLoadSuccess/PresetLoadFailure states
- 6 unit tests verify all functionality
- Zero flutter analyze warnings, all 741 tests pass

Technical implementation:
- Gets current slot count via requestNumAlgorithmsInPreset()
- Calculates target slot indices (startingSlotIndex + templateIndex)
- Reuses parameter/mapping logic from loadPresetToDevice()
- Proper error handling and state management throughout
- Doc comments explain append behavior and user save requirement

Files modified:
- lib/ui/metadata_sync/metadata_sync_cubit.dart - Added injectTemplateToDevice()

Files created:
- test/ui/metadata_sync/metadata_sync_cubit_inject_template_test.dart - 6 tests

Story: e5-4-implement-template-injection-logic-append-only
Epic: epic-5

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -65,7 +65,7 @@ development_status:
   e5-1-extend-database-schema-for-template-flag: done
   e5-2-add-ui-to-tag-untag-presets-as-templates: done
   e5-3-filter-presets-to-show-templates-only: done
-  e5-4-implement-template-injection-logic-append-only: ready-for-dev
+  e5-4-implement-template-injection-logic-append-only: review
   e5-5-build-template-preview-dialog: ready-for-dev
   e5-6-add-inject-template-action-to-templates-view: ready-for-dev
   e5-7-handle-edge-cases-and-error-scenarios: ready-for-dev
