Story E5.6: Add Inject Template action to templates view
Added Inject button to template list items in the Templates tab that opens
the template preview dialog for safe template injection. Button is disabled
in offline mode and during sync operations, with proper user feedback.

Key acceptance criteria met:
- Inject button (Icons.add_circle_outline) added to template list items
- Button appears only in online mode with device connected
- Clicking button opens TemplatePreviewDialog with template context
- Button disabled in offline mode with tooltip explanation
- Button disabled during sync operations (reuses sync lock logic)
- Success snackbar displays after injection with algorithm count
- UI auto-refreshes via MetadataSyncCubit state emissions
- Zero flutter analyze warnings, all 326 tests pass

Technical implementation:
- Button positioned before Load/Delete for intuitive workflow
- Integrates with existing DistingCubit and MetadataSyncCubit
- Manager availability check with error snackbar
- Proper async context.mounted checks
- Tooltips provide clear state feedback
- Success snackbar with green background and formatted message
- Follows existing button patterns from Load/Delete actions

Files modified:
- lib/ui/metadata_sync/metadata_sync_page.dart - Added Inject button and dialog

Story: e5-6-add-inject-template-action-to-templates-view
Epic: epic-5

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -67,7 +67,7 @@ development_status:
   e5-3-filter-presets-to-show-templates-only: done
   e5-4-implement-template-injection-logic-append-only: review
   e5-5-build-template-preview-dialog: done
-  e5-6-add-inject-template-action-to-templates-view: ready-for-dev
+  e5-6-add-inject-template-action-to-templates-view: done
   e5-7-handle-edge-cases-and-error-scenarios: ready-for-dev
   epic-5-retrospective: optional
 
