--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -68,7 +68,7 @@ development_status:
   e5-4-implement-template-injection-logic-append-only: review
   e5-5-build-template-preview-dialog: done
   e5-6-add-inject-template-action-to-templates-view: done
-  e5-7-handle-edge-cases-and-error-scenarios: ready-for-dev
+  e5-7-handle-edge-cases-and-error-scenarios: done
   epic-5-retrospective: optional
 
   epic-6: contexted
