fix: fetch all tags in release workflow for proper release notes generation
The workflow was using shallow fetch (depth=1) which prevented the release notes script from finding previous tags for comparison. Now fetches full history to enable proper release notes generation.

--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history and tags for release notes
 
       - name: Extract Version (for the create-release job)
         id: extract_version
