--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -98,7 +98,7 @@ development_status:
   7-3-add-io-flags-to-parameter-info: done
   7-4-synchronize-output-mode-usage-data: done
   7-5-replace-io-pattern-matching-with-flag-data: review
-  7-6-replace-output-mode-pattern-matching-with-usage-data: in-progress
+  7-6-replace-output-mode-pattern-matching-with-usage-data: done
   7-7-add-io-flags-to-offline-metadata: done
   7-8-generate-updated-metadata-bundle-with-io-flags: done
   7-9-upgrade-existing-databases-with-io-flags: done
