feat: persist output mode usage to database (Story 7-10)

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -98,11 +98,12 @@ development_status:
   7-2-auto-refresh-parameter-state-after-edits-and-remove-disabled-parameter-tooltip: done
   7-3-add-io-flags-to-parameter-info: done
   7-4-synchronize-output-mode-usage-data: done
-  7-5-replace-io-pattern-matching-with-flag-data: review
+  7-5-replace-io-pattern-matching-with-flag-data: done
   7-6-replace-output-mode-pattern-matching-with-usage-data: done
   7-7-add-io-flags-to-offline-metadata: done
   7-8-generate-updated-metadata-bundle-with-io-flags: done
   7-9-upgrade-existing-databases-with-io-flags: done
+  7-10-persist-output-mode-usage-to-database: done
   epic-7-retrospective: optional
 
   epic-8: contexted
