Review Epic 6: Approve e6-1 and fix analyzer warnings

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -91,7 +91,7 @@ development_status:
   epic-5-retrospective: optional
 
   epic-6: contexted
-  e6-1-mobile-performance-page-support: review
+  e6-1-mobile-performance-page-support: done
 
   epic-7: contexted
   7-1-implement-parameter-disabled-grayed-out-state-in-ui: done
