--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -48,6 +48,7 @@ stories_done:
   - e10-11-audit-and-validate-parameter-ui-controls
   - e10-12-add-per-step-probability-parameters
   - e10-13-add-permutation-and-gate-type-controls
+  - e10-17-use-firmware-enum-strings-for-dropdowns
 
 # Next Actions
 todo_story: "epic-10-retrospective"
